@@ -50,8 +50,6 @@ class EXPORT JackAudioDriver : public JackDriver
         jack_default_audio_sample_t* GetOutputBuffer(int port_index);
         jack_default_audio_sample_t* GetMonitorBuffer(int port_index);
 
-        void CycleIncTime();
-
     private:
 
         int ProcessAsync();
