@@ -33,7 +33,7 @@ int JackFreewheelDriver::Process()
 {
     if (fIsMaster) {
         jack_log("JackFreewheelDriver::Process master %lld", fEngineControl->fTimeOutUsecs);
-        fLastWaitUst = GetMicroSeconds();
+        JackDriver::CycleTakeTime();
         fEngine->Process(fLastWaitUst);
         fGraphManager->ResumeRefNum(fClientControl, fSynchroTable); // Signal all clients
         if (fGraphManager->SuspendRefNum(fClientControl, fSynchroTable, FREEWHEEL_DRIVER_TIMEOUT * 1000000) < 0) { // Wait for all clients to finish for 10 sec
